--- a/source/_drafts/2020-日常手记.md
+++ b/source/_drafts/2020-日常手记.md
@@ -26,3 +26,9 @@ abbrlink: 61933
 `# mysqldump -u root -p <database> > <dat_000000.sql>` 备份
 
 `# mysqldump -u root -p <database> < <dat_000000.sql> ` 恢复
+
+
+
+关闭 hyper-v
+
+`bcdedit /set hypervisorlaunchtype off` 
