--- a/source/_posts/2019-7-日常学习手记.md
+++ b/source/_posts/2019-7-日常学习手记.md
@@ -97,13 +97,14 @@ $ mysqldump  -u username -p passwd < <filename_to_open>  还原
 - b
 
 - - bytes 类型
-  -  response = b'<h1>Hello       World!</h1>' 
+  -  response = b'Hello World!' 
 
-### Git 自报家门
+### Git 
 
 ```bash
 $ git config --global user.username "username"
 $ git config --global user.email "xxxx@email.com"
+# 必须是双引号
 ```
 
 ```bash
