--- a/source/_drafts/2020-日常手记.md
+++ b/source/_drafts/2020-日常手记.md
@@ -7,19 +7,13 @@ abbrlink: 61933
 
 # 终端
 
-`mysqladmin -u root -p drop users` 
-
-管理员身份删除users库
+`mysqladmin -u root -p drop users`  管理员身份删除users库
 
 
 
-`# mysqldump -u root -p <database> | gzip > <dat_0000000.gz>` 
+`# mysqldump -u root -p <database> | gzip > <dat_0000000.gz>`  使用root用户把数据库以**压缩**方式`备份`
 
-使用root用户把数据库以**压缩**方式`备份`
-
-`# gzip < <dat_0000000.gz> | mysqldump -u root -p <database>`
-
-从**压缩**文件直接`恢复`库
+`# gzip < <dat_0000000.gz> | mysqldump -u root -p <database>` 从**压缩**文件直接`恢复`库
 
 
 
@@ -29,6 +23,4 @@ abbrlink: 61933
 
 
 
-关闭 hyper-v
-
-`bcdedit /set hypervisorlaunchtype off` 
+PowerShell 关闭 hyper-v `bcdedit /set hypervisorlaunchtype off` 
