--- a/source/_posts/吾听此曲三月不知肉味故荐君.md
+++ b/source/_posts/吾听此曲三月不知肉味故荐君.md
@@ -14,5 +14,14 @@ date: 2020-06-27 20:38:59
 
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=532936&auto=0&height=32"></iframe>
 
+## かりぬい - 能登麻美子
+
+<audio controls="controls" autoplay="autoplay">
+                    <source src="1.mp3" type="audio/mpeg">
+                  Enjoy.
+</audio>
+
+
+
 ![](0.jpg)
 
