--- a/source/_drafts/2020-日常手记.md
+++ b/source/_drafts/2020-日常手记.md
@@ -24,3 +24,10 @@ abbrlink: 61933
 
 
 PowerShell 关闭 hyper-v `bcdedit /set hypervisorlaunchtype off` 
+
+
+
+# 杂用
+
+使用 `http://d0.ananas.chaoxing.com/download/` + `{objectid}` 可以下载超星课件中的资源。
+
